# cookiecutter-django

./: .gitignore  CHANGELOG.md  README.md  cookiecutter.json
.github/workflows/: ci.yml
docs/: developing-locally-docker.rst  developing-locally.rst  project-generation-options.rst
hooks/: post_gen_project.py
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  local.yml  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/compose/: Dockerfile  base.Dockerfile
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile  entrypoint  start
{{cookiecutter.project_slug}}/config/: api_router.py  asgi.py  urls.py
{{cookiecutter.project_slug}}/config/settings/: alpha.py  base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt
{{cookiecutter.project_slug}}/utility/: fix_postgresql_auto_pk.sql  reset_migrations.sh
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/files/: apps.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/files/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/account/: account_inactive.html  email.html  email_confirm.html  password_change.html  password_set.html  signup_closed.html  verified_email_required.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  apps.py  forms.py  models.py  schema.py  serializers.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/migrations/: 0002_user_avatar.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: dingtalk.py  middleware.py  storages.py
